--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- لينك مربوط به استايل ها -->
     <link rel="stylesheet" href="/assets/style..css">
 </head>
 
 <body>
     <section  id="topPage">
+        <!-- كدهاي مربوط به سربرگ پروژه -->
         <header>
             <p class="tittle">Warren Edward Buffett</p>
         </header>
