--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </header>
 
         <main>
+            <!-- منوی همبرگری درسمت پروژه قراردارد -->
             <div>
                 <div class="hamberger">
                     <a class="click" href="#About">About</a>
@@ -32,14 +33,14 @@
                 <div class="hamberger">
                     <a class="click" href="#Portfolio"> Portfolio</a>  
                 </div>
-               
+               <!-- عنوان پروژه -->
                 <div class="textBox">
                     <h1>Warren Edward Buffett</h1>
                     <p> biographical</p>
                 </div>
         </main>
         <div>
-
+<!-- توضیحات وعنوان مربوط به بخش درباره -->
             <div id="About"></div>
             <h2  class="aboutText">About
                 <hr>
@@ -50,7 +51,7 @@
                     CEO of «Berkshire Hathaway» (Berkshire Hathaway), he is one of the largest and most successful
                     companiesInvestment companies have a reputation in the world.</p>
             </div>
-
+<!-- کدهای بیوگرافی -->
             <div class="biographi">
                 <img class="photo" src="/assets/images/104864179-20150331-0014-1180.jpg" alt="photoBarenbuffet">
                 <ul>
@@ -75,6 +76,7 @@
                         Omaha, Nebraska, and its shares are traded on the New York Stock Exchange.</p>
                 </ul>
             </div>
+            <!-- کدهای نمودار پروژه -->
             <div id="Skills"></div>
             <div class="backGround2">
                 <h3 class="aboutText8">Skills
@@ -127,6 +129,7 @@
             </div>
         </div>
         </div>
+        <!-- کدهای بخش رزومه -->
  <div id="Resume"></div>
         <h4 class="aboutText">Resume
             <hr>
@@ -179,6 +182,7 @@
             <li> "Price is what you pay; value is what you get."</li>
 
         </div>
+        <!-- کدهای بخش پرتفلیو -->
         <div class="backGround1">
             <div id="Portfolio"></div>
 
